--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "bootstrap": "^5.3.2",
     "iconify": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
+    "reactstrap": "^9.2.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
