--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "iconify": "^1.4.0",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.3",
