--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
+    "@zxing/library": "^0.20.0",
     "axios": "^1.5.1",
     "bootstrap": "^5.3.2",
     "iconify": "^1.4.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.12",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "reactstrap": "^9.2.0",
